giving style to th game

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake hunter</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <canvas id="snake" width="512" height="512" ></canvas>
+    <header>
+        <h1>SNAKE HUNTER</h1>
+    </header>
+    <div class="canvas">
+        <canvas id="snake" width="500" height="450" ></canvas>
+    </div>
+    <footer>
+        <a target="blank" href="https://github.com/Igords-goncalves/"><img class="github" src="img/github.png" alt=""></a>
+        <p>&copy; by Igor Gonçalves</p>
+    </footer>
+    <script defer src="script.js"></script>
 </body>
 </html>
