solução do problema da cobrInha não crescer

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Snake hunter</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <h1>SNAKE HUNTER</h1>
     </header>
     <div class="canvas">
-        <canvas id="snake" width="500" height="450" ></canvas>
+        <canvas id="snake" width="384" height="384" ></canvas>
     </div>
     <footer>
         <a target="blank" href="https://github.com/Igords-goncalves/"><img class="github" src="img/github.png" alt=""></a>
