Adding funtionality points

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <div class="dados">
         NOME<input class="nome" type="text">
-        PONTOS<select class="pontos" type="text"></select>
+        PONTOS<input class="pontos" type="text">
         LEVEL<select class="level" type="text">
             <option value="1">1</option>
             <option value="2">2</option>
