--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <h1>SNAKE HUNTER</h1>
     </header>
     <div class="dados">
-        NOME<input class="nome" type="text">
+        NOME<input class="nome" type="text" placeholder="Nome ...">
         PONTOS<input class="pontos" type="text">
-        LEVEL<select class="level" type="text">
+        LEVEL<select class="level" type="text" onchange="level()">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
